fix: Tabs dropdown extra horizontal scrollbar

--- a/components/tabs/style/dropdown.less
+++ b/components/tabs/style/dropdown.less
@@ -19,6 +19,7 @@
     max-height: 200px;
     margin: 0;
     padding: @dropdown-edge-child-vertical-padding 0;
+    overflow-x: hidden;
     overflow-y: auto;
     text-align: left;
     list-style-type: none;
